--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                             <div class="image-map-container">
                                 <img class="peliculas-fincher" src="assets/img/david_fincher_peliculas.png" usemap="#peliculasFincher" alt="Películas de David Fincher">
                                 <map name="peliculasFincher">
-                                    <area target="_blank" alt="seven" title="seven" href="/pages/seven.html" coords="1,-1,352,527" shape="rect">
-                                    <area target="_blank" alt="gone-girl" title="gone-girl" href="/pages/gone_girl.html" coords="402,2,794,529" shape="rect">
-                                    <area target="_blank" alt="social-network" title="social-network" href="/pages/social_network.html" coords="851,0,1207,527" shape="rect">
-                                    <area target="_blank" alt="dragon-tattoo" title="dragon-tattoo" href="/pages/the_girl_with_the_dragon_tattoo.html" coords="1260,-1,1606,525" shape="rect">
-                                    <area target="_blank" alt="zodiac" title="zodiac" href="/pages/zodiac.html" coords="-1,552,351,1079" shape="rect">
-                                    <area target="_blank" alt="the-game" title="the-game" href="/pages/the_game.html" coords="412,551,780,1079" shape="rect">
-                                    <area target="_blank" alt="benjamin-bottom" title="benjamin-bottom" href="/pages/the_curious_case_of_benjamin_bottom.html" coords="851,555,1207,1079" shape="rect">
-                                    <area target="_blank" alt="the-killer" title="the-killer" href="/pages/the_killer.html" coords="1264,565,1608,1079" shape="rect">
+                                    <area target="_blank" alt="seven" title="seven" href="pages/seven.html" coords="1,-1,352,527" shape="rect">
+                                    <area target="_blank" alt="gone-girl" title="gone-girl" href="pages/gone_girl.html" coords="402,2,794,529" shape="rect">
+                                    <area target="_blank" alt="social-network" title="social-network" href="pages/social_network.html" coords="851,0,1207,527" shape="rect">
+                                    <area target="_blank" alt="dragon-tattoo" title="dragon-tattoo" href="pages/the_girl_with_the_dragon_tattoo.html" coords="1260,-1,1606,525" shape="rect">
+                                    <area target="_blank" alt="zodiac" title="zodiac" href="pages/zodiac.html" coords="-1,552,351,1079" shape="rect">
+                                    <area target="_blank" alt="the-game" title="the-game" href="pages/the_game.html" coords="412,551,780,1079" shape="rect">
+                                    <area target="_blank" alt="benjamin-bottom" title="benjamin-bottom" href="pages/the_curious_case_of_benjamin_bottom.html" coords="851,555,1207,1079" shape="rect">
+                                    <area target="_blank" alt="the-killer" title="the-killer" href="pages/the_killer.html" coords="1264,565,1608,1079" shape="rect">
                                 </map>
                             </div>
                         </div>
