--- a/pages/gone_girl.html
+++ b/pages/gone_girl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gone girl</title>
-    <link rel="stylesheet" href="/css/pelicula.css">
+    <link rel="stylesheet" href="../css/pelicula.css">
 </head>
 <body>
     <header>
