--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
     </footer>
     <audio id="background-audio" loop>
-        <source src="/assets/audios/thriller-ambience.mp3" type="audio/mp3">
+        <source src="../assets/audios/thriller-ambience.mp3" type="audio/mp3">
         Tu navegador no soporta el elemento de audio.
     </audio>
     <button class="audio-control" onclick="toggleAudio()"></button>
