actualizacion funcion sonido

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </audio>
     <button class="audio-control" onclick="toggleAudio()"></button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/image-map-resizer/1.0.10/js/imageMapResizer.min.js"></script>
-    <script defer>
+    <script>
         window.onload = function() {
             imageMapResize();
         };
@@ -201,7 +201,6 @@
                 audio.pause();
             }
         }
-        toggleAudio();
     </script>
 </body>
 </html>
